# clipper2c

./: CMakeLists.txt
include/: clipper2c.h
src/: clipper2c.cpp
